Fix minor issue with flex spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -30,6 +30,10 @@ body {
   min-height: 100vh;
 }
 
+.spacer {
+  flex: 1;
+}
+
 nav {
   background-color: var(--primary-color-light);
   padding: 0.5rem;
@@ -337,6 +341,7 @@ footer a:hover {
 /* newWine & editWine styles */
 
 .mainBox {
+  flex: none;
   width: 50%;
 }
 
@@ -464,6 +469,7 @@ fieldset label {
 /* detailWine styles */
 
 .detailMain {
+  flex: none;
   background-image: url('images/bouchons.jpg');
   background-repeat: no-repeat;
   background-size: cover;
